core/kube-system/cilium/gateway-web.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-kube-system-gateways-to-ref-secrets
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kube-system
  to:
    - group: ""
      kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-web
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: prod-http-gw
      protocol: HTTP
      port: 80
    - name: prod-https-gw
      protocol: HTTPS
      port: 443
      hostname: "*.${CLUSTER_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: letsencrypt-wildcard-cert
            namespace: cert-manager
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: kube-system
spec:
  parentRefs:
    - name: prod-http-gw
  hostnames:
    - "${CLUSTER_DOMAIN}"
    - "*.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: prod-https-gw
  hostnames:
    - "hubble.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
